--- a/IsPrimeNumber/web/index.html
+++ b/IsPrimeNumber/web/index.html
@@ -33,7 +33,7 @@ and open the template in the editor.
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="IsPrimeNumberController">ตรวจสอบเลขจำนวนเฉพาะ</a>
-                            <a class="dropdown-item" href="#">Another action</a>
+                            <a class="dropdown-item" href="testRequestParameter">Test request Parameter</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="#">Something else here</a>
                         </div>
