--- a/IsPrimeNumber/web/index.html
+++ b/IsPrimeNumber/web/index.html
@@ -24,24 +24,15 @@ and open the template in the editor.
                     <li class="nav-item active">
                         <a class="nav-link" href="/IsPrimeNumber/resource/PrimeNumberView.jsp">CheckPrime</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">TestRequest</a>
+                     <li class="nav-item">
+                        <a class="nav-link" href="TestRequestParameterServlet">TestRequest</a>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Dropdown
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="IsPrimeNumberController">ตรวจสอบเลขจำนวนเฉพาะ</a>
-                            <a class="dropdown-item" href="testRequestParameter">Test request Parameter</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Something else here</a>
-                        </div>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled" href="#">Disabled</a>
+                     <li class="nav-item">
+                        <a class="nav-link" href="ProductList">ProductList</a>
                     </li>
                 </ul>
+                   
+                
                 <form class="form-inline my-2 my-lg-0">
                     <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
