--- a/Cinema/web/index.html
+++ b/Cinema/web/index.html
@@ -16,49 +16,9 @@ and open the template in the editor.
     </head>
     <body>
 
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">SITCinema</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="MoviesList">รายการหนัง </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">ซื้อตั๋วหนัง</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled" href="#">จัดการตั๋ว</a>
-                    </li>
-                </ul>
-                <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="search" placeholder="ค้นหาหนัง" aria-label="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                </form>
-            </div>
-        </nav>
-        
-        <div align="center">
-            <br><br>
-             <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="btn btn-info btn-lg" href="MoviesList">รายการหนัง </a>
-                    </li><br>
-                    <li class="nav-item">
-                        <a class="btn btn-success btn-lg" href="#">ซื้อตั๋วหนัง</a>
-                    </li>
-                    <br>
-                    <li class="nav-item">
-                        <a class="btn btn-warning btn-lg" href="#">จัดการตั๋ว</a>
-                    </li>
-                </ul>
-            
-        </div>
-
-
 
     </body>
+    <script>
+       window.location = "../Cinema/Login";
+    </script>
 </html>
