--- a/Cinema/web/index.html
+++ b/Cinema/web/index.html
@@ -15,6 +15,6 @@ and open the template in the editor.
 
     </body>
     <script>
-       window.location = "../Cinema/Login";
+       window.location = "../Cinema/MoviesList";
     </script>
 </html>
